[package]
name = "nostr-mempool-alerts"
version = "0.1.0"
edition = "2021"
include = ["/src", "LICENSE", "/dist", "/configuration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.18"
lazy_static = "1.4.0"
tokio = { version = "1.25", features = ["full"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["macros", "postgres", "uuid", "chrono", "migrate", "offline", "runtime-tokio-native-tls"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"
anyhow = "1.0.40"
serde-aux = "4.1.2"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version =  "0.18.0", features = ["native-tls"]}
signal-hook = "0.3.15"
futures-util = "0.3.26"
crossbeam-channel = "0.5.7"
async-trait = "0.1.66"
serde_json = "1.0.61"


[dev-dependencies]
once_cell = "1.7.2"
wiremock = "0.5"
serde_json = "1.0.61"
